force-app/main/default/objects/genesis__Applications__c/fields/Affiliate_Partner__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliate Partner</label>
    <type>Checkbox</type>
</CustomField>