force-app/main/default/objects/genesis__Applications__c/fields/agentVerificationPendingFlag__c.field-meta.xml
<CustomField>
    <fullName>agentVerificationPendingFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>agentVerificationPendingFlag</label>
    <type>Checkbox</type>
</CustomField>