force-app/main/default/objects/genesis__Applications__c/fields/ALertFlag__c.field-meta.xml
<CustomField>
    <fullName>ALertFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALertFlag</label>
    <type>Checkbox</type>
</CustomField>