force-app/main/default/objects/genesis__Applications__c/fields/Alerts_No_Of_Days_Before_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Alerts_No_Of_Days_Before_Expiration__c</fullName>
    <formula>$Setup.Expiry_Date__c.Alert_Before_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerts No Of Days Before Expiration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>