force-app/main/default/objects/genesis__Applications__c/fields/Allocation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Detail__c</fullName>
    <description>Information about allocation result</description>
    <label>Allocation Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>