force-app/main/default/objects/genesis__Applications__c/fields/Allocation_Engine_Version__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_Version__c</fullName>
    <description>The allocation model version used</description>
    <label>Allocation Engine Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>