force-app/main/default/objects/genesis__Applications__c/fields/Allocation_ID__c.field-meta.xml
<CustomField>
    <fullName>Allocation_ID__c</fullName>
    <description>UUID created via the allocation engine model</description>
    <label>Allocation ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>