force-app/main/default/objects/genesis__Applications__c/fields/Allocation_Operation_Error__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Operation_Error__c</fullName>
    <description>Allocation operation attempted</description>
    <label>Allocation Operation Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>advp</fullName>
            </value>
            <value>
                <fullName>reallocation</fullName>
            </value>
            <value>
                <fullName>manual</fullName>
            </value>
            <value>
                <fullName>cancel</fullName>
            </value>
            <value>
                <fullName>final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>