force-app/main/default/objects/genesis__Applications__c/fields/Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Status__c</fullName>
    <description>The allocation engine result</description>
    <label>Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>no_allocation</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>