force-app/main/default/objects/genesis__Applications__c/fields/Allocation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Timestamp__c</fullName>
    <description>Timestamp of the allocation</description>
    <label>Allocation Timestamp</label>
    <type>DateTime</type>
</CustomField>