force-app/main/default/objects/genesis__Applications__c/fields/Annual_Individual_Income_App__c.field-meta.xml
<CustomField>
    <fullName>Annual_Individual_Income_App__c</fullName>
    <label>Annual Individual Income App</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>