force-app/main/default/objects/genesis__Applications__c/fields/Application_Email__c.field-meta.xml
<CustomField>
    <fullName>Application_Email__c</fullName>
    <formula>if(genesis__Account__r.cnotify__Email__c != NULL, genesis__Account__r.cnotify__Email__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Email</label>
    <type>Text</type>
</CustomField>