force-app/main/default/objects/genesis__Applications__c/fields/Application_external_id__c.field-meta.xml
<CustomField>
    <fullName>Application_external_id__c</fullName>
    <externalId>true</externalId>
    <label>Application external id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>