force-app/main/default/objects/genesis__Applications__c/fields/Application_Graph__c.field-meta.xml
<CustomField>
    <fullName>Application_Graph__c</fullName>
    <description>to display a graph in the template</description>
    <label>Application Graph</label>
    <length>100</length>
    <type>Text</type>
</CustomField>