force-app/main/default/objects/genesis__Applications__c/fields/Application_SessionId__c.field-meta.xml
<CustomField>
    <fullName>Application_SessionId__c</fullName>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application SessionId</label>
    <type>Text</type>
</CustomField>