force-app/main/default/objects/genesis__Applications__c/fields/Application_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Start Date</label>
    <type>Date</type>
</CustomField>