force-app/main/default/objects/genesis__Applications__c/fields/Application_Start_DateV2__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_DateV2__c</fullName>
    <label>Application Start Date</label>
    <type>Date</type>
</CustomField>