force-app/main/default/objects/genesis__Applications__c/fields/Application_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Application_Work_Email__c</fullName>
    <formula>genesis__Account__r.peer__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Work Email</label>
    <type>Text</type>
</CustomField>