force-app/main/default/objects/genesis__Applications__c/fields/ApplicationTemplate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationTemplate__c</fullName>
    <description>##Conga created btn:00bn0000000QX2w
##Conga updated btn:00bn0000000QX2w</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=aAWn00000003SbY,aAWn00000003SbT&quot; + 
&quot;&amp;congaemailtemplateid=aANn00000004CgN&quot; + 
&quot;&amp;emailtoid=&quot; + genesis__Account__c +
&quot;&amp;emailcc=mohseen.md18@gmail.com&quot; + 
&quot;&amp;EmailAdditionalTo=&quot;+genesis__Account__r.cnotify__Email__c+
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>ApplicationTemplate</label>
    <type>Text</type>
</CustomField>