force-app/main/default/objects/genesis__Applications__c/fields/Borrower_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name_Formula__c</fullName>
    <formula>IF( ISBLANK(ChosenName__c) , Borrower_s_First_Name__c , ChosenName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower Name Formula</label>
    <type>Text</type>
</CustomField>