force-app/main/default/objects/genesis__Applications__c/fields/Borrower_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_Email__c</fullName>
    <description>/*Created By Nupur */ 
For Email Alert</description>
    <label>Borrower&apos;s Email</label>
    <type>Email</type>
</CustomField>