force-app/main/default/objects/genesis__Applications__c/fields/Borrower_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_First_Name__c</fullName>
    <description>/*Created by Nupur */ 
- For Email Templates</description>
    <formula>genesis__Account__r.Borrower_s_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower&apos;s First Name</label>
    <type>Text</type>
</CustomField>