force-app/main/default/objects/genesis__Applications__c/fields/Borrower_s_LastName__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_LastName__c</fullName>
    <description>/*Created by Nupur */
 - For Email Templates</description>
    <formula>genesis__Account__r.Borrower_s_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower&apos;s LastName</label>
    <type>Text</type>
</CustomField>