force-app/main/default/objects/genesis__Applications__c/fields/Borrowers_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrowers_Work_Email__c</fullName>
    <label>Borrowers Work Email</label>
    <type>Email</type>
</CustomField>