force-app/main/default/objects/genesis__Applications__c/fields/Bureau_DOB__c.field-meta.xml
<CustomField>
    <fullName>Bureau_DOB__c</fullName>
    <label>Bureau DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>