force-app/main/default/objects/genesis__Applications__c/fields/Bureau_SSN__c.field-meta.xml
<CustomField>
    <fullName>Bureau_SSN__c</fullName>
    <label>Bureau SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>