force-app/main/default/objects/genesis__Applications__c/fields/CheckEmailAlertValue__c.field-meta.xml
<CustomField>
    <fullName>CheckEmailAlertValue__c</fullName>
    <formula>IF( Alerts_No_Of_Days_Before_Expiration__c  =  Differenc_Between_Today_and_Expiry_Date__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckEmailAlertValue</label>
    <type>Checkbox</type>
</CustomField>