force-app/main/default/objects/genesis__Applications__c/fields/Conga_Solution_Template_Inv_Harsh__c.field-meta.xml
<CustomField>
    <fullName>Conga_Solution_Template_Inv_Harsh__c</fullName>
    <description>##Conga created btn:00bn0000000QXCI</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=aAWn00000003Sbs&quot; + 

&quot;&amp;emailtoid=&quot; + genesis__Account__c + 

&quot;&amp;EmailAdditionalTo=&quot;+genesis__Account__r.cnotify__Email__c+ 


&quot;&amp;congaemailtemplateid=aANn00000004CgN&quot; + 
&quot;&amp;emailreplytoid=&quot; + OwnerId +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>Conga Solution Template Inv Harsh</label>
    <type>Text</type>
</CustomField>