force-app/main/default/objects/genesis__Applications__c/fields/Credit_Policy_Approval_Models__c.field-meta.xml
<CustomField>
    <fullName>Credit_Policy_Approval_Models__c</fullName>
    <label>Credit Policy Approval Models</label>
    <length>50</length>
    <type>Text</type>
</CustomField>