force-app/main/default/objects/genesis__Applications__c/fields/Credit_Summary_Verification__c.field-meta.xml
<CustomField>
    <fullName>Credit_Summary_Verification__c</fullName>
    <label>Credit Summary Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>