force-app/main/default/objects/genesis__Applications__c/fields/CreditOptic_IdScore__c.field-meta.xml
<CustomField>
    <fullName>CreditOptic_IdScore__c</fullName>
    <label>CreditOptic IdScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>