force-app/main/default/objects/genesis__Applications__c/fields/CreditScore_Notice__c.field-meta.xml
<CustomField>
    <fullName>CreditScore_Notice__c</fullName>
    <description>##Conga created btn:00bn0000000EAXl
##Conga updated btn:00bn0000000EAXl</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1,1&quot; + 
&quot;&amp;templateid=aAWn00000009JFw&quot; + 
&quot;&amp;emailadditionalto=&quot; + Application_Email__c +
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>CreditScore Notice</label>
    <type>Text</type>
</CustomField>