force-app/main/default/objects/genesis__Applications__c/fields/custom_APR_for_not_rounding__c.field-meta.xml
<CustomField>
    <fullName>custom_APR_for_not_rounding__c</fullName>
    <label>custom_APR_for_not_rounding</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>