force-app/main/default/objects/genesis__Applications__c/fields/dcp_eligible__c.field-meta.xml
<CustomField>
    <fullName>dcp_eligible__c</fullName>
    <label>dcp_eligible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No - Redecision</fullName>
            </value>
            <value>
                <fullName>No - New Offer Selected</fullName>
            </value>
            <value>
                <fullName>No - Application Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>