force-app/main/default/objects/genesis__Applications__c/fields/DCP_Investor_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>DCP_Investor_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCP Investor Eligibility</label>
    <type>Checkbox</type>
</CustomField>