force-app/main/default/objects/genesis__Applications__c/fields/DCP_total_amount__c.field-meta.xml
<CustomField>
    <fullName>DCP_total_amount__c</fullName>
    <label>DCP_total_amount</label>
    <summarizedField>DCp_Arcus_Transactions__c.Requested_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>DCp_Arcus_Transactions__c.Transaction_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DCp_Arcus_Transactions__c.Pay_at_Funding__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DCp_Arcus_Transactions__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>