force-app/main/default/objects/genesis__Applications__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>genesis__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Current Delinquency</fullName>
            </value>
            <value>
                <fullName>Current Judgement</fullName>
            </value>
            <value>
                <fullName>Current Tax Lien</fullName>
            </value>
            <value>
                <fullName>DTI Too High</fullName>
            </value>
            <value>
                <fullName>Inability to Pay</fullName>
            </value>
            <value>
                <fullName>Inability to Pay (NeoVerify)</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
            <value>
                <fullName>Ineligible Use for Loan Proceeds</fullName>
            </value>
            <value>
                <fullName>Insufficient Income for Requested Amount</fullName>
            </value>
            <value>
                <fullName>NDI Too Low</fullName>
            </value>
            <value>
                <fullName>New Open Tradeline</fullName>
            </value>
            <value>
                <fullName>New Tradeline Inquiry</fullName>
            </value>
            <value>
                <fullName>Non US Citizen or Perm Resident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Country</fullName>
            </value>
            <value>
                <fullName>Out of State</fullName>
            </value>
            <value>
                <fullName>Unable to Establish Intent</fullName>
            </value>
            <value>
                <fullName>Unable to Satisfactorily Verify ID</fullName>
            </value>
            <value>
                <fullName>Unable to Verify Employment</fullName>
            </value>
            <value>
                <fullName>Unable to Verify Income</fullName>
            </value>
            <value>
                <fullName>Unsecured Installment Loans Open Last 12 Month Above Max</fullName>
            </value>
            <value>
                <fullName>Rescind</fullName>
            </value>
            <value>
                <fullName>Loan Discrepancy</fullName>
            </value>
            <value>
                <fullName>Funding Partner Problem</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>