force-app/main/default/objects/genesis__Applications__c/fields/Delivery_Id__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Id__c</fullName>
    <externalId>true</externalId>
    <label>Delivery_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>