force-app/main/default/objects/genesis__Applications__c/fields/Delivery_Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner_Code__c</fullName>
    <label>Delivery_Partner_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>