force-app/main/default/objects/genesis__Applications__c/fields/Delivery_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Processed_Date__c</fullName>
    <label>Delivery_Processed_Date</label>
    <type>DateTime</type>
</CustomField>