force-app/main/default/objects/genesis__Applications__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery_Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>