force-app/main/default/objects/genesis__Applications__c/fields/Differenc_Between_Today_and_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Differenc_Between_Today_and_Expiry_Date__c</fullName>
    <description>/* Created By Nupur */

Created for Email Trigger</description>
    <formula>Expiry_Date__c - $User.loan__Current_Branch_s_System_Date__c</formula>
    <label>Differenc Between Today and Expiry Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>