force-app/main/default/objects/genesis__Applications__c/fields/DocuSign_EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_EnvelopeId__c</fullName>
    <label>DocuSign EnvelopeId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>