force-app/main/default/objects/genesis__Applications__c/fields/DocuSign_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Sign_Date__c</fullName>
    <label>DocuSign Sign Date</label>
    <type>Date</type>
</CustomField>