force-app/main/default/objects/genesis__Applications__c/fields/DocuSignFlag__c.field-meta.xml
<CustomField>
    <fullName>DocuSignFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked - DocuSign Email sent</description>
    <label>DocuSignFlag</label>
    <type>Checkbox</type>
</CustomField>