force-app/main/default/objects/genesis__Applications__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer</label>
    <type>Checkbox</type>
</CustomField>