force-app/main/default/objects/genesis__Applications__c/fields/Esign_consent_withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Esign_consent_withdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esign consent withdrawn</label>
    <type>Checkbox</type>
</CustomField>