force-app/main/default/objects/genesis__Applications__c/fields/Estimated_Amount_needed__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount_needed__c</fullName>
    <label>Amount needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>