force-app/main/default/objects/genesis__Applications__c/fields/Estimated_credit_card_balances__c.field-meta.xml
<CustomField>
    <fullName>Estimated_credit_card_balances__c</fullName>
    <label>credit card balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>