force-app/main/default/objects/genesis__Applications__c/fields/Estimated_loan_balances__c.field-meta.xml
<CustomField>
    <fullName>Estimated_loan_balances__c</fullName>
    <label>loan balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>