force-app/main/default/objects/genesis__Applications__c/fields/Estimated_origination_fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_origination_fee__c</fullName>
    <label>origination fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>