force-app/main/default/objects/genesis__Applications__c/fields/Expected_Chargeoff__c.field-meta.xml
<CustomField>
    <fullName>Expected_Chargeoff__c</fullName>
    <description>Expected charge off amount in dollars used by Allocation Engine Model</description>
    <label>Expected Chargeoff</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>