force-app/main/default/objects/genesis__Applications__c/fields/Expected_Yield__c.field-meta.xml
<CustomField>
    <fullName>Expected_Yield__c</fullName>
    <description>Expected yield amount in dollars used by Allocation Engine Model</description>
    <label>Expected Yield</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>