force-app/main/default/objects/genesis__Applications__c/fields/Expiration_Date_for_Email_trigger__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_for_Email_trigger__c</fullName>
    <description>/*Created By Nupur */</description>
    <label>Expiration Date for Email trigger</label>
    <type>Date</type>
</CustomField>