force-app/main/default/objects/genesis__Applications__c/fields/Expiration_Tag__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Tag__c</fullName>
    <label>Expiration Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>expired_pre_qual</fullName>
            </value>
            <value>
                <fullName>expired_verification</fullName>
            </value>
            <value>
                <fullName>expired_docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>