force-app/main/default/objects/genesis__Applications__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>/*Created By Nupur */
------- For Email Alert</description>
    <formula>Application_Start_DateV2__c + $Setup.Expiry_Date__c.No_of_days_for_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>