force-app/main/default/objects/genesis__Applications__c/fields/Federal_tax_payment__c.field-meta.xml
<CustomField>
    <fullName>Federal_tax_payment__c</fullName>
    <label>Federal tax payment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>