force-app/main/default/objects/genesis__Applications__c/fields/FICO__c.field-meta.xml
<CustomField>
    <fullName>FICO__c</fullName>
    <label>FICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>