force-app/main/default/objects/genesis__Applications__c/fields/File_cleared_Image__c.field-meta.xml
<CustomField>
    <fullName>File_cleared_Image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File - cleared Image</label>
    <referenceTo>skuid__Image__c</referenceTo>
    <relationshipLabel>Applications (File - cleared Image)</relationshipLabel>
    <relationshipName>Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>