force-app/main/default/objects/genesis__Applications__c/fields/File_rejected_image__c.field-meta.xml
<CustomField>
    <fullName>File_rejected_image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File - rejected image</label>
    <referenceTo>skuid__Image__c</referenceTo>
    <relationshipLabel>Applications (File - rejected image)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>