force-app/main/default/objects/genesis__Applications__c/fields/File_submitted_image__c.field-meta.xml
<CustomField>
    <fullName>File_submitted_image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File - submitted image</label>
    <referenceTo>skuid__Image__c</referenceTo>
    <relationshipLabel>Applications (File - submitted image)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>