force-app/main/default/objects/genesis__Applications__c/fields/File_total_image__c.field-meta.xml
<CustomField>
    <fullName>File_total_image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File - total image</label>
    <referenceTo>skuid__Image__c</referenceTo>
    <relationshipLabel>Applications (File - total image)</relationshipLabel>
    <relationshipName>Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>