force-app/main/default/objects/genesis__Applications__c/fields/First_time_offer_select__c.field-meta.xml
<CustomField>
    <fullName>First_time_offer_select__c</fullName>
    <description>Ignore the redecision alternate flow incase where 1st time the offer is selected</description>
    <label>First time offer select</label>
    <summaryFilterItems>
        <field>Pricing_Offer__c.Is_Offer_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Pricing_Offer__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>