force-app/main/default/objects/genesis__Applications__c/fields/Fraud_Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Assignment_Reason__c</fullName>
    <label>Fraud Assignment Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>