force-app/main/default/objects/genesis__Applications__c/fields/genesis__Account__c.field-meta.xml
<CustomField>
    <fullName>genesis__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Applications_account</relationshipName>
    <type>Lookup</type>
</CustomField>