force-app/main/default/objects/genesis__Applications__c/fields/genesis__Action__c.field-meta.xml
<CustomField>
    <fullName>genesis__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>genesis__Action__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>