force-app/main/default/objects/genesis__Applications__c/fields/genesis__Additional_Cash_Required__c.field-meta.xml
<CustomField>
    <fullName>genesis__Additional_Cash_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Cash Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>