force-app/main/default/objects/genesis__Applications__c/fields/genesis__APR__c.field-meta.xml
<CustomField>
    <fullName>genesis__APR__c</fullName>
    <description>Annual Percentage Rate</description>
    <label>APR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>