force-app/main/default/objects/genesis__Applications__c/fields/genesis__Arrears__c.field-meta.xml
<CustomField>
    <fullName>genesis__Arrears__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrears</label>
    <type>Checkbox</type>
</CustomField>