force-app/main/default/objects/genesis__Applications__c/fields/genesis__Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>genesis__Asset_Class__c</fullName>
    <formula>genesis__CL_Product__r.clcommon__Asset_Class__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Class</label>
    <type>Text</type>
</CustomField>